Fix CSS loader issue, rewrite readme to make more readable, and change background and logo

--- a/client/src/components/auth/Auth.css
+++ b/client/src/components/auth/Auth.css
@@ -1,5 +1,12 @@
 #auth {
   padding-top: 5vh;
+  display: flex;
+  flex-direction: column;
+
+  #logo {
+    align-self: center;
+    width: 20%;
+  }
 
   h1 {
     font-family: 'Noto Serif TC', serif;
