--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -1,5 +1,5 @@
 img {
-  width: 5em;
+  width: 8em;
 }
 
 /*Mobile Header */
